# context-aware-domain-generalization

./: CITATION.cff  README.md  pyproject.toml
experiments/: 2023-04-03 Test.ipynb  2023-04-12 Rotated MNIST.ipynb  2023-04-13 Datasets.ipynb  2023-05-03 Classifier.ipynb  2023-05-04 ResNet Classifier.ipynb  2023-05-18 Set Linear.ipynb  2023-06-09 Test.ipynb  2023-06-12 Events.ipynb  2023-06-14 ColoredMNIST.ipynb  2023-06-16 PovertyMap.ipynb  2023-06-22 Varying Domain Size.ipynb  2023-06-30 Pure Classification.ipynb  2023-09-06 PovertyMap.ipynb  2023-10-31 Plots.ipynb  2023-12-01 PovertyMap.ipynb  2023-12-01 Simpson Plots.ipynb  2023-12-11 Figure 2.ipynb  2023-12-12-Novel-Env-Detection.ipynb  2023-12-12-Simpson-Prediction.ipynb  2023-12-12-criteria_analysis.ipynb  2023-12-14-ColoredMNIST.ipynb  simpson_results.csv
src/adaptive_dg/: check_criteria.py  dataset_loader.py  hparam_search.py  train_autoencoder.py  train_autoencoder_env.py  train_flow.py  train_set_flow.py
src/adaptive_dg/datasets/: __init__.py  augment.py  bike_sharing.py  california_housing.py  census_income.py  domain_generalization.py  mlbook.py  multi_domain.py  set_dataset.py  simpson.py
src/adaptive_dg/evaluation/: __init__.py  competence_scores.py  events.py  model_loading.py
src/adaptive_dg/models/: __init__.py  all_in_one.py  autoencoders.py  base_classes.py  cinn_set.py  domain_predict.py  flows.py  reconstruction_nets.py  set_encoder.py  target_predict.py  target_predict_flow.py  utils.py  utils_networks.py
src/adaptive_dg/models_utils/: autoencoder.py  autoencoder_net2net.py  base_net2net.py  (+3 more)
(+90 files in other folders)
